# NetBricks

./: Cargo.toml  ExtractFlows.ipynb  LabelData.ipynb  anomalydetection.ipynb  anomalydetection_new.ipynb  examples.sh  extractpcapdata.ipynb
framework/src/headers/: tcp.rs
synflood/: Cargo.toml
test/ddosdetector/: Cargo.toml
test/ddosdetector/src/: main.rs  nf.rs
test/flowextractor/: Cargo.toml
test/synflood/src/: main.rs  nf.rs
