[package]
name = "ddosdetector"
version = "0.1.0"
authors = ["jayanth <jayanthkalyanasundaram@gmail.com>"]

[dependencies]
e2d2 = { path = "../../framework", features = ["performance"] }
time = ">=0.1.0"
getopts = "*" 
rand = "0.3"
fnv = "*" 
twox-hash = "*" 
rulinalg = "0.4.2"

[features]
default = []
print = []
